add clear button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <button id="sendButton">Send</button>                    
                 </div>
                 <button id="disconnectButton">Disconnect</button>
+                <button id="clearButton">Clear</button>
             </div>            
         </div>
         <script type="text/javascript" src="cordova.js"></script>
