--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             </div>            
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            app.initialize();
+            $(document).ready(app.initialize);
+
         </script>
     </body>
 </html>
